5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1756_1583.log
== TEST (2019-05-29 11:58:48) 
-- CODE:
n=input()

i=0
n1=""
while(i<len(n)):
	if((i+1)%3==0)and((i+1)!=len(n)):
		n1=n1+n[i]+"."
	else:
		i=i+1
print(n1)
-- ERROR:
File "XXXX", line 3
    s = "Osso"
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 11:59:22) 
-- CODE:
n=input()

i=0
n1=""
while(i<len(n)):
	if((i+1)%3==0)and((i+1)!=len(n)):
		n1=n1+n[i]+"."
	else:
		n1=n1+n[i]
	i=i+1
print(n1)
-- EXECUTION TIME:
0.416405
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:11:01) 
-- CODE:
n=input()

i=0
n1=""
while(i<len(n)):
	if((i+1)%3==0)and((i+1)!=len(n)):
		n1=n1+n[i]+"."
	else:
		i=i+1
print(n1)
-- EXECUTION TIME:
0.185403
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:11:01) 
-- CODE:
n=input()

i=0
n1=""
while(i<len(n)):
	if((i+1)%3==0)and((i+1)!=len(n)):
		n1=n1+n[i]+"."
	else:
		i=i+1
print(n1)
-- EXECUTION TIME:
0.255784
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:

-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:

-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:18:23) 
-- CODE:
n=input("numero: ")

i = 0
n1 = ""
while (i < len(n)):
	if ((i+1)%3 == 0) and ((i+1) != len(n)):
		n1 += n[i] + "."
	else:
		n1 = n1 + n[i]
		
	i +=1
	
print(n1)
-- EXECUTION TIME:
0.182863
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
